# networking-bgpvpn

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .pylintrc  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README-bagpipe.rst  README.rst  bindep.txt  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
bgpvpn_dashboard/api/: bgpvpn.py
bgpvpn_dashboard/common/: bgpvpn.py
bgpvpn_dashboard/dashboards/admin/bgpvpn/: forms.py  panel.py  tables.py  tabs.py  urls.py  views.py  workflows.py
bgpvpn_dashboard/dashboards/project/bgpvpn/: forms.py  panel.py  tables.py  tabs.py  urls.py  views.py  workflows.py
bgpvpn_dashboard/enabled/: _1495_project_bgpvpn_panel.py  _2115_admin_bgpvpn_panel.py  _2360_admin_bgpvpn_panel.py
bgpvpn_dashboard/etc/: bgpvpn-horizon.conf  networking_bgpvpn_policy.yaml
bgpvpn_dashboard/locale/en_GB/LC_MESSAGES/: django.po
bgpvpn_dashboard/locale/fr/LC_MESSAGES/: django.po
bgpvpn_dashboard/test/: helpers.py  settings.py  test.py  urls.py
bgpvpn_dashboard/test/admin/: test_forms.py  test_tables.py  test_views.py
bgpvpn_dashboard/test/api_tests/: bgpvpn_tests.py  test_bgpvpn.py
bgpvpn_dashboard/test/project/: test_forms.py  test_tables.py  test_views.py
bgpvpn_dashboard/test/test_data/: bgpvpn_data.py  utils.py
devstack/: devstack-gate-bagpipe-rc  devstack-gate-rc  gate_hook.sh  override-defaults  plugin.sh  post_test_hook.sh  pre_test_hook.sh  settings
devstack/bagpipe/: ovs-agent
doc/: requirements.txt
doc/source/: api.rst  components-sdn.blockdiag  conf.py  heat.rst  horizon.rst  index.rst  installation.rst  introduction.rst  overview.rst  specs.rst  usage.rst
doc/source/bagpipe/: index.rst  overview.blockdiag
doc/source/configuration/: index.rst  networking-bgpvpn.rst  opencontrail-driver.rst  policy-sample.rst  policy.rst
doc/source/configuration/samples/: networking-bgpvpn.rst  opencontrail-driver.rst
doc/source/contributor/: index.rst
doc/source/contributor/future/: attributes.rst
doc/source/future/: attributes.rst  index.rst
doc/source/install/: index.rst
doc/source/nuage/: index.rst
doc/source/opencontrail/: index.rst
doc/source/opendaylight/: index.rst
doc/source/samples/: bgpvpn-sample01.py
doc/source/user/: api.rst  components-sdn.blockdiag  heat.rst  horizon.rst  index.rst  overview.rst  usage.rst  workflows.seqdiag
doc/source/user/drivers/: index.rst
etc/: README.txt
etc/neutron/: networking-bgpvpn.conf  networking_bgpvpn.conf
etc/neutron/policy.d/: bgpvpn.conf
etc/oslo-config-generator/: networking-bgpvpn.conf  networking_bgpvpn.conf  opencontrail-driver.conf
etc/oslo-policy-generator/: policy.conf
networking_bgpvpn/: __init__.py  _i18n.py  version.py
networking_bgpvpn/locale/en_GB/LC_MESSAGES/: networking_bgpvpn.po
networking_bgpvpn/neutron/: opts.py
networking_bgpvpn/neutron/db/: bgpvpn_db.py  head.py
networking_bgpvpn/neutron/db/bgpvpn/: bgpvpn_db.py
networking_bgpvpn/neutron/db/migration/: cli.py
networking_bgpvpn/neutron/extensions/: bgpvpn.py  bgpvpn_routes_control.py  bgpvpn_vni.py
networking_bgpvpn/neutron/extensions/bgpvpn/: bgpvpn.py
networking_bgpvpn/neutron/services/: plugin.py
networking_bgpvpn/neutron/services/bgpvpn/: plugin.py
networking_bgpvpn/neutron/services/common/: constants.py  utils.py
networking_bgpvpn/neutron/services/service_drivers/: __init__.py  driver_api.py  dummy.py
networking_bgpvpn/osc/: bgpvpn.py  network_association.py  resource_association.py  router_association.py
networking_bgpvpn/policies/: __init__.py  bgpvpn.py  network_association.py  port_association.py  router_association.py
networking_bgpvpn/tests/: test_networking_bgpvpn.py
networking_bgpvpn/tests/functional/: requirements.txt  test_placeholder.py
networking_bgpvpn/tests/functional/db/: test_migrations.py
networking_bgpvpn/tests/unit/: test_dummy.py
networking_bgpvpn/tests/unit/client/: test_client.py
networking_bgpvpn/tests/unit/db/: test_db.py
networking_bgpvpn/tests/unit/extensions/: test_bgpvpn.py  test_bgpvpn_rc_base.py  test_bgpvpn_routes_control.py  test_bgpvpn_vni.py
networking_bgpvpn/tests/unit/osc/: fakes.py  (+2 more)
networking_bgpvpn_heat/: _i18n.py  bgpvpnservice.py
networking_bgpvpn_heat/examples/: bgpvpn_test-00.yaml  bgpvpn_test-01-admin.yaml  bgpvpn_test-01-tenant.yaml  bgpvpn_test-01bis_router-tenant.yaml  bgpvpn_test-01ter_port-tenant.yaml  bgpvpn_test-04-admin.yaml  bgpvpn_test-04-tenant.yaml
networking_bgpvpn_tempest/: README.rst  config.py  plugin.py
networking_bgpvpn_tempest/services/bgpvpn/: bgpvpn_client.py
networking_bgpvpn_tempest/tests/: base.py
networking_bgpvpn_tempest/tests/api/: test_bgpvpn.py
networking_bgpvpn_tempest/tests/scenario/: manager.py  test_bgpvpn_basic.py
playbooks/networking-bgpvpn-bagpipe-dsvm-functional/: run.yaml
playbooks/networking-bgpvpn-bagpipe-dsvm-install/: run.yaml
playbooks/networking-bgpvpn-dsvm-functional/: run.yaml
playbooks/networking-bgpvpn-dsvm-install/: run.yaml
releasenotes/notes/: 0_heat-support-ab233de7401aeb36.yaml  add-vni-to-bgpvpn-31d6eda7ba6d5047.yaml  bagpipe-driver-improvements-401a7ba59a6f5f45.yaml  bagpipe-router-compat-b53b6f3799cd23db.yaml  bagpipe_enable_evpn-ae64f77df89e069b.yaml  bagpipe_ovo_rpcs-380f7bd52969bef7.yaml  bgpvpn_service_declaration-6d9ecd2c397e4821.yaml  deprecate-old-opencontrail-driver-a598892ddf54c724.yaml  drop-py-2-7-4db5f2b1529bb09c.yaml  drop-py39-da0112a0b7936798.yaml  filtering-on-resource-association-2acdbc5b59d1a40a.yaml  heat_bgpvpn_local_pref-a1cbfde10810b157.yaml  heat_port_associations-f2d316f3b8c755fe.yaml  horizon-in-extras-371d572b09437dc4.yaml  horizon-support-06a7b21286002949.yaml  mitaka-prelude-1675467c144a91ea.yaml  odl_router_association-fa2ed7c396531418.yaml  pre_commit_checks-b902ee19a3654a7b.yaml  remove_obsolete_drivers-3706e080098a5cb6.yaml  routes-control-api-ext-c0c4020e7370d833.yaml
releasenotes/source/: conf.py  index.rst  unreleased.rst
specs/: bgpvpn.rst
tools/: django-manage.py  tox_install.sh
(+76 files in other folders)
