[metadata]
name = networking-bgpvpn
summary = API and Framework to interconnect bgpvpn to neutron networks
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/networking-bgpvpn
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    networking_bgpvpn
    networking_bgpvpn_tempest
    networking_bgpvpn_heat
    bgpvpn_dashboard
data_files =
    etc/neutron/policy.d =
        etc/neutron/policy.d/bgpvpn.conf
    etc/neutron =
        etc/neutron/networking_bgpvpn.conf

[entry_points]
neutronclient.extension =
    bgpvpn = networking_bgpvpn.neutronclient.neutron.v2_0.bgpvpn.bgpvpn
openstack.neutronclient.v2 =
    bgpvpn_create = networking_bgpvpn.osc.bgpvpn:CreateBgpvpn
    bgpvpn_update = networking_bgpvpn.osc.bgpvpn:UpdateBgpvpn
    bgpvpn_delete = networking_bgpvpn.osc.bgpvpn:DeleteBgpvpn
    bgpvpn_list = networking_bgpvpn.osc.bgpvpn:ListBgpvpn
    bgpvpn_show = networking_bgpvpn.osc.bgpvpn:ShowBgpvpn
    bgpvpn_net-assoc_create = networking_bgpvpn.osc.network_association:CreateBgpvpnNetAssoc
    bgpvpn_net-assoc_update = networking_bgpvpn.osc.network_association:UpdateBgpvpnNetAssoc
    bgpvpn_net-assoc_delete = networking_bgpvpn.osc.network_association:DeleteBgpvpnNetAssoc
    bgpvpn_net-assoc_list = networking_bgpvpn.osc.network_association:ListBgpvpnNetAssoc
    bgpvpn_net-assoc_show = networking_bgpvpn.osc.network_association:ShowBgpvpnNetAssoc
    bgpvpn_router-assoc_create = networking_bgpvpn.osc.router_association:CreateBgpvpnRouterAssoc
    bgpvpn_router-assoc_update = networking_bgpvpn.osc.router_association:UpdateBgpvpnRouterAssoc
    bgpvpn_router-assoc_delete = networking_bgpvpn.osc.router_association:DeleteBgpvpnRouterAssoc
    bgpvpn_router-assoc_list = networking_bgpvpn.osc.router_association:ListBgpvpnRouterAssoc
    bgpvpn_router-assoc_show = networking_bgpvpn.osc.router_association:ShowBgpvpnRouterAssoc
neutron.db.alembic_migrations=
    networking-bgpvpn = networking_bgpvpn.neutron.db.migration:alembic_migrations
tempest.test_plugins =
    networking-bgpvpn = networking_bgpvpn_tempest.plugin:NetworkingBgpvpnTempestPlugin
heat.constraints =
    neutron.bgpvpn = networking_bgpvpn_heat.bgpvpnservice:BGPVPNConstraint
neutron.agent.l2.extensions =
    bagpipe_bgpvpn = networking_bgpvpn.neutron.services.service_drivers.bagpipe.agent_extension:BagpipeBgpvpnAgentExtension

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_bgpvpn/locale
domain = networking_bgpvpn

[update_catalog]
domain = networking-bgpvpn
output_dir = networking_bgpvpn/locale
input_file = networking_bgpvpn/locale/networking-bgpvpn.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_bgpvpn/locale/networking-bgpvpn.pot
