[metadata]
name = networking-bgpvpn
summary = API and Framework to interconnect bgpvpn to neutron networks
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/networking-bgpvpn/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    networking_bgpvpn
    networking_bgpvpn_tempest
    networking_bgpvpn_heat
    bgpvpn_dashboard
data_files =
    etc/neutron/policy.d =
        etc/neutron/policy.d/bgpvpn.conf
    etc/neutron =
        etc/neutron/networking_bgpvpn.conf

[entry_points]
neutronclient.extension=
    bgpvpn = networking_bgpvpn.neutronclient.neutron.v2_0.bgpvpn.bgpvpn
neutron.db.alembic_migrations=
    networking-bgpvpn = networking_bgpvpn.neutron.db.migration:alembic_migrations
tempest.test_plugins =
    networking-bgpvpn = networking_bgpvpn_tempest.plugin:NetworkingBgpvpnTempestPlugin
heat.constraints =
    neutron.bgpvpn = networking_bgpvpn_heat.bgpvpnservice:BGPVPNConstraint
neutron.service_plugins =
    bgpvpn = networking_bgpvpn.neutron.services.plugin:BGPVPNPlugin

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_bgpvpn/locale
domain = networking_bgpvpn

[update_catalog]
domain = networking-bgpvpn
output_dir = networking_bgpvpn/locale
input_file = networking_bgpvpn/locale/networking-bgpvpn.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_bgpvpn/locale/networking-bgpvpn.pot

[openstack_translations]
django_modules = bgpvpn_dashboard
python_modules = networking_bgpvpn networking_bgpvpn_heat
