[metadata]
name = networking-bgpvpn
summary = API and Framework to interconnect bgpvpn to neutron networks
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/networking-bgpvpn/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
packages =
    networking_bgpvpn
    networking_bgpvpn_heat
    bgpvpn_dashboard
data_files =
    etc/neutron =
        etc/neutron/networking_bgpvpn.conf

[extras]
# Dependencies for optional drivers/features.
# To install them, specify networking-bgpvpn[<drivers>]
# e.g. "networking-bgpvpn[horizon]"
# For tox testing, we have these in test-requirements.txt too
# as tox extras installation does not honor constraints file.
bagpipe =
    networking-bagpipe>=9.0.0 # Apache-2.0
horizon =
    horizon>=17.1.0 # Apache-2.0

[entry_points]
neutronclient.extension=
    bgpvpn = networking_bgpvpn.neutronclient.neutron.v2_0.bgpvpn.bgpvpn
neutron.db.alembic_migrations=
    networking-bgpvpn = networking_bgpvpn.neutron.db.migration:alembic_migrations
heat.constraints =
    neutron.bgpvpn = networking_bgpvpn_heat.bgpvpnservice:BGPVPNConstraint
neutron.service_plugins =
    bgpvpn = networking_bgpvpn.neutron.services.plugin:BGPVPNPlugin
oslo.config.opts =
    networking-bgpvpn.service_provider = networking_bgpvpn.neutron.opts:list_service_provider
oslo.config.opts.defaults =
    networking-bgpvpn.service_provider = networking_bgpvpn.neutron.opts:set_service_provider_default
oslo.policy.policies =
    networking-bgpvpn = networking_bgpvpn.policies:list_rules
neutron.policies =
    networking-bgpvpn = networking_bgpvpn.policies:list_rules

[compile_catalog]
directory = networking_bgpvpn/locale
domain = networking_bgpvpn

[update_catalog]
domain = networking-bgpvpn
output_dir = networking_bgpvpn/locale
input_file = networking_bgpvpn/locale/networking-bgpvpn.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_bgpvpn/locale/networking-bgpvpn.pot

[openstack_translations]
django_modules = bgpvpn_dashboard
python_modules = networking_bgpvpn networking_bgpvpn_heat
